<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoodTrackerActivity">


    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/moodsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/homeButton">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_6_months"
                android:padding="8dp"
                android:gravity="center"
                android:background="#D5B5FF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/most_frequent_mood"
                android:padding="8dp"
                android:gravity="center"
                android:background="#D5B5FF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/associated_with"
                android:padding="8dp"
                android:gravity="center"
                android:background="#D5B5FF"/>
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
        />






    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>